[package]
name = "ggrs_test_game"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggrs = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serial_test = "0.5"
piston = "0.53.0"
piston2d-graphics = "0.40.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.78.0"
freetype-rs = "0.27.0"
find_folder = "0.3.0"

[dependencies.resphys]
git = "https://github.com/ValorZard/Resphys-Fixed"

# Examples
[[example]]
name = "box_game_p2p"
path = "src/box_game_p2p.rs"

[[example]]
name = "box_game_spectator"
path = "src/box_game_spectator.rs"
